# django-port-pervie

./: pyproject.toml
backend/: db.sqlite3  test_db_setup.py
backend/backend/: settings.py  urls.py
backend/menu_app/: models.py  urls.py  views.py
backend/menu_app/migrations/: 0001_initial.py
backend/menu_app/templates/: menu.html
backend/menu_app/templates/tags/: menu.py
