[tool.poetry]
name = "django-port-pervie"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_port_pervie"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
